managing '/final_project' in url

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "final_project",
   "version": "0.1.0",
-  "homepage": "https://shanshan-sg5507.github.io/final_project/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,7 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node set-homepage.js && react-scripts build",
+    "set-homepage": "echo 'Setting homepage for production build' && node set-homepage.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://shanshan-sg5507.github.io/final_project/"
 }
